fixed a bug in spacing

--- a/mimsticker.ir-newer/stickerShop-website/sass/style.scss
+++ b/mimsticker.ir-newer/stickerShop-website/sass/style.scss
@@ -296,10 +296,11 @@ body {
 }
 
 .bestSelles {
-  width: 100%;
+  width: 98%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   margin-top: 1rem;
 
   .sectionWith4childSections {
